@@ -6,7 +6,7 @@ use Test;
 BEGIN 
   { 
   $| = 1;
-  # chdir 't' if -d 't';
+  chdir 't' if -d 't';
   unshift @INC, '../lib'; # to run manually
   plan tests => 31;
   }
